--- a/css/3-portfolio.css
+++ b/css/3-portfolio.css
@@ -1,16 +1,17 @@
 #portfolio .bottom {
-  width: 726px;
+  width: 876px;
 }
 
 #portfolio .bottom {
 }
 
 #portfolio .bottom ul > li {
-  height: 200px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
   margin: 40px 20px;
   float: left;
   border: 1px solid #202020;
+  border-radius: 10px;
   text-align: center;
 }
 
@@ -18,8 +19,43 @@
   padding: 5px 10px;
 }
 
-#portfolio .bottom ul > li a:hover {
-  background: red;
+#portfolio .bottom {
+  font-size: 24px;
+}
+
+.chess img {
+  position: absolute;
+  z-index: -500;
+  right: 0;
   border-radius: 5px;
-  color: white;
+}
+
+.vinstagram {
+  background: #517fa4;
+}
+
+.snake {
+  background: green;
+}
+
+.chess {
+  background: red;
+}
+
+.vinstagram a:hover {
+  background: white;
+  border-radius: 5px;
+  color: #517fa4;
+}
+
+.snake a:hover {
+  background: white;
+  border-radius: 5px;
+  color: green;
+}
+
+.chess a:hover {
+  background: white;
+  border-radius: 5px;
+  color: red;
 }
