--- a/css/3-portfolio.css
+++ b/css/3-portfolio.css
@@ -74,3 +74,20 @@
   border-radius: 5px;
   color: red;
 }
+
+.cityspade {
+  border: 4px solid #202020;
+  color: white;
+  font-size: 35px;
+  line-height: 30px;
+}
+
+.cityspade a {
+  font-size: 27px;
+  color: black;
+}
+
+.cityspade a:hover {
+  color: white;
+  background: green;
+}
