--- a/css/4-contact.css
+++ b/css/4-contact.css
@@ -1,10 +1,11 @@
 #contact .bottom {
-  padding: 20px;
-  width: 400px;
+  padding: 20px 0 20px 10px;
+  width: 320px;
   margin: auto;
   text-align: left;
 }
 
+/*** This is for border radius on hovers ***/
 #contact .bottom a {
   padding: 3px 6px;
 }
