--- a/css/1-home.css
+++ b/css/1-home.css
@@ -56,7 +56,6 @@
 
 /*** Full Size Screen ***/
 @media screen and (min-width: 750px) {
-
   #home .bottom {
     margin: auto;
     max-width: 750px;
@@ -73,6 +72,7 @@
     float: left;
     max-width: 500px;
     padding: 20px 20px 5px 20px;
+    height: 246px;
   }
 
   #home .bottom .skills {
